@@ -1,19 +1,21 @@
-/*
- * Copyright 2005 JBoss Inc
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.drools.model.codegen.execmodel;
 
 import java.util.ArrayList;
@@ -22,7 +24,8 @@ import java.util.List;
 import java.util.Map;
 
 import org.drools.model.codegen.execmodel.domain.Person;
-import org.junit.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.kie.api.builder.Message;
 import org.kie.api.builder.Results;
 import org.kie.api.runtime.KieSession;
@@ -32,47 +35,46 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 public class MvelOperatorsTest extends BaseModelTest {
 
-    public MvelOperatorsTest( RUN_TYPE testRunType ) {
-        super( testRunType );
-    }
-
-    @Test
-    public void testIn() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testIn(RUN_TYPE runType) {
         String str =
             "rule R when\n" +
             "    String(this in (\"a\", \"b\"))" +
             "then\n" +
             "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( "b" );
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testStr() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testStr(RUN_TYPE runType) {
         String str =
             "rule R when\n" +
             "    String(this str[startsWith] \"M\")" +
             "then\n" +
             "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( "Mario" );
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testStrNot() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testStrNot(RUN_TYPE runType) {
         String str =
             "rule R when\n" +
             "    String(this not str[startsWith] \"M\")" +
             "then\n" +
             "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( "Mario" );
         ksession.insert( "Luca" );
@@ -80,15 +82,16 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(ksession.fireAllRules()).isEqualTo(2);
     }
 
-    @Test
-    public void testStrHalf() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testStrHalf(RUN_TYPE runType) {
         String str =
             "rule R when\n" +
             "    String(this str[startsWith] \"M\" || str[endsWith] \"a\" || str[length] 10)"+
             "then\n" +
             "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( "Mario" );
         ksession.insert( "Luca" );
@@ -97,15 +100,16 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(ksession.fireAllRules()).isEqualTo(3);
     }
 
-    @Test
-    public void testStrHalfOrAndAmpersand() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testStrHalfOrAndAmpersand(RUN_TYPE runType) {
         String str =
             "rule R when\n" +
             "    String(this str[startsWith] \"M\" || str[endsWith] \"a\" && str[length] 4)"+
             "then\n" +
             "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( "Mario" );
         ksession.insert( "Luca" );
@@ -114,8 +118,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(ksession.fireAllRules()).isEqualTo(2);
     }
 
-    @Test
-    public void testRange() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testRange(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
                 "global java.util.List list\n" +
@@ -125,7 +130,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    list.add($name);" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         List<String> list = new ArrayList<>();
         ksession.setGlobal( "list", list );
@@ -140,8 +145,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(list.containsAll(asList("Mark", "Edson"))).isTrue();
     }
 
-    @Test
-    public void testExcludedRange() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testExcludedRange(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
                 "global java.util.List list\n" +
@@ -151,7 +157,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    list.add($name);" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         List<String> list = new ArrayList<>();
         ksession.setGlobal( "list", list );
@@ -166,8 +172,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(list.containsAll(asList("Luca", "Mario"))).isTrue();
     }
 
-    @Test
-    public void testBinding() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testBinding(RUN_TYPE runType) {
         String str =
             "import " + Person.class.getCanonicalName() + "\n" +
             "global java.util.List list\n" +
@@ -177,7 +184,7 @@ public class MvelOperatorsTest extends BaseModelTest {
             "    list.add($name);" +
             "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         List<String> list = new ArrayList<>();
         ksession.setGlobal( "list", list );
@@ -190,22 +197,24 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(list.get(0)).isEqualTo("Mario");
     }
 
-    @Test
-    public void testMatches() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testMatches(RUN_TYPE runType) {
         String str =
                 "rule R when\n" +
                 "    String(this matches \"\\\\w\")" +
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( "b" );
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testExcludes() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testExcludes(RUN_TYPE runType) {
         String str =
                 "import java.util.List\n" +
                 "rule R when\n" +
@@ -213,15 +222,16 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
         ksession.insert( asList("ciao", "test") );
         assertThat(ksession.fireAllRules()).isEqualTo(0);
         ksession.insert( asList("hello", "world") );
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testNotContains() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testNotContains(RUN_TYPE runType) {
         String str =
                 "import java.util.List\n" +
                 "rule R when\n" +
@@ -229,15 +239,16 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
         ksession.insert( asList("ciao", "test") );
         assertThat(ksession.fireAllRules()).isEqualTo(0);
         ksession.insert( asList("hello", "world") );
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testStartsWithWithChar() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testStartsWithWithChar(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
                 "global java.util.List list\n" +
@@ -248,7 +259,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    list.add($p.getName());" +
                 "end";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         List<String> list = new ArrayList<>();
         ksession.setGlobal( "list", list );
@@ -261,8 +272,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(list.get(0)).isEqualTo("Luca");
     }
 
-    @Test
-    public void testNotIn() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testNotIn(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
                 "global java.util.List list\n" +
@@ -272,7 +284,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    list.add($name);" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         List<String> list = new ArrayList<>();
         ksession.setGlobal( "list", list );
@@ -286,8 +298,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(list.get(0)).isEqualTo("Mario");
     }
 
-    @Test
-    public void testNotInUsingShort() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testNotInUsingShort(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
                 "global java.util.List list\n" +
@@ -297,7 +310,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    list.add($name);" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         List<String> list = new ArrayList<>();
         ksession.setGlobal( "list", list );
@@ -311,8 +324,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(list.get(0)).isEqualTo("Mario");
     }
 
-    @Test
-    public void testMatchesWithFunction() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testMatchesWithFunction(RUN_TYPE runType) {
         // DROOLS-4382
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
@@ -322,7 +336,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         Person p = new Person("Mark", 40);
         p.setLikes( "M." );
@@ -330,8 +344,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testMatchesOnNullString() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testMatchesOnNullString(RUN_TYPE runType) {
         // DROOLS-4525
         String str =
                 "import " + Person.class.getCanonicalName() + ";" +
@@ -344,7 +359,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                         "then\n" +
                         "end\n";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         Person first = new Person("686878");
         ksession.insert(first);
@@ -375,8 +390,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         }
     }
 
-    @Test
-    public void testInDouble() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testInDouble(RUN_TYPE runType) {
         // DROOLS-4892
         String str =
                 "import " + DoubleFact.class.getCanonicalName() + ";" +
@@ -404,10 +420,10 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    System.out.println(\"Rule[\"+kcontext.getRule().getName()+\"] fires.\");\n" +
                 "end";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         DoubleFact f = new DoubleFact();
-        f.setDoubleVal(new Double(100));
+        f.setDoubleVal(Double.valueOf(100.0));
         f.setPrimitiveDoubleVal(200);
         ksession.insert(f);
         assertThat(ksession.fireAllRules()).isEqualTo(4);
@@ -430,8 +446,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         }
     }
 
-    @Test
-    public void testContainsOnNull() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testContainsOnNull(RUN_TYPE runType) {
         // DROOLS-5315
         String str =
                 "import " + ListContainer.class.getCanonicalName() + ";" +
@@ -440,7 +457,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( new ListContainer() );
         assertThat(ksession.fireAllRules()).isEqualTo(0);
@@ -449,8 +466,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testNumericStringsWithLeadingZero() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testNumericStringsWithLeadingZero(RUN_TYPE runType) {
         // DROOLS-5926
         String str =
                 "rule R when\n" +
@@ -458,14 +476,15 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( 800 );
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testNumericHexadecimal() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testNumericHexadecimal(RUN_TYPE runType) {
         // DROOLS-5926
         String str =
                 "rule R when\n" +
@@ -473,14 +492,15 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         ksession.insert( 2048 );
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testListLiteralCreation() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testListLiteralCreation(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + ";" +
                 "global java.util.List result;" +
@@ -490,7 +510,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    result.add($myList);" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
         List<Object> result = new ArrayList<>();
         ksession.setGlobal("result", result);
         ksession.insert( new Person() );
@@ -501,8 +521,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat((List)obj).containsExactlyInAnyOrder("aaa", "bbb", "ccc");
     }
 
-    @Test
-    public void testMapLiteralCreation() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testMapLiteralCreation(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + ";" +
                      "global java.util.List result;" +
@@ -512,7 +533,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                      "    result.add($myMap);" +
                      "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
         List<Object> result = new ArrayList<>();
         ksession.setGlobal("result", result);
         ksession.insert(new Person());
@@ -523,8 +544,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(((Map) obj).get("key")).isEqualTo("value");
     }
 
-    @Test
-    public void testEmptySingleApexString() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testEmptySingleApexString(RUN_TYPE runType) {
         // DROOLS-6057
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
@@ -535,7 +557,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "    list.add($name);" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         List<String> list = new ArrayList<>();
         ksession.setGlobal( "list", list );
@@ -548,8 +570,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(list.get(0)).isEqualTo("");
     }
 
-    @Test
-    public void testContainsOnString() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testContainsOnString(RUN_TYPE runType) {
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
                 "rule R when\n" +
@@ -557,7 +580,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        KieSession ksession = getKieSession(str);
+        KieSession ksession = getKieSession(runType, str);
 
         Person person1 = new Person("");
         ksession.insert(new Person("mario", 47));
@@ -565,8 +588,9 @@ public class MvelOperatorsTest extends BaseModelTest {
         assertThat(ksession.fireAllRules()).isEqualTo(1);
     }
 
-    @Test
-    public void testContainsOnMapShouldntCompile() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testContainsOnMapShouldntCompile(RUN_TYPE runType) {
         // BAPL-1957
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
@@ -575,12 +599,13 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        Results results = createKieBuilder( str ).getResults();
+        Results results = createKieBuilder(runType, str).getResults();
         assertThat(results.getMessages(Message.Level.ERROR).isEmpty()).isFalse();
     }
 
-    @Test
-    public void testContainsOnIntShouldntCompile() {
+    @ParameterizedTest
+	@MethodSource("parameters")
+    public void testContainsOnIntShouldntCompile(RUN_TYPE runType) {
         // BAPL-1957
         String str =
                 "import " + Person.class.getCanonicalName() + "\n" +
@@ -589,7 +614,7 @@ public class MvelOperatorsTest extends BaseModelTest {
                 "then\n" +
                 "end ";
 
-        Results results = createKieBuilder( str ).getResults();
+        Results results = createKieBuilder(runType, str).getResults();
         assertThat(results.getMessages(Message.Level.ERROR).isEmpty()).isFalse();
     }
 }
